--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "webpack-merge": "^4.1.3"
   },
   "lint-staged": {
-    "*.{js,json,css,scss,md}": [
+    "*.{js,ts,json,css,scss,md}": [
       "prettier --write",
       "git add"
     ]
