Adding progress output

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "main": "src/index.ts",
   "scripts": {
-    "start": "yarn webpack-dev-server --env.env=dev",
-    "start:prod": "yarn webpack-dev-server --env.env=prod",
+    "start": "yarn webpack-dev-server --progress --env.env=dev",
+    "start:prod": "yarn webpack-dev-server --progress --env.env=prod",
     "debug": "node --inspect-brk webpack",
     "debug:dev": "node --inspect-brk webpack --env.env=dev",
     "debug:prod": "node --inspect-brk webpack --env.env=prod",
-    "build": "webpack",
+    "build": "webpack --progress",
     "build:dev": "yarn build --env.env=dev",
     "build:prod": "yarn build --env.env=prod",
     "build:watch": "yarn build --watch",
