--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bundle-buddy-webpack-plugin": "^0.3.0",
     "clean-webpack-plugin": "^0.1.19",
     "compression-webpack-plugin": "^1.1.11",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
